OC-130: refactor(timetable): centralize conflict validation into validateAssignment()
TimetableStaffingService, TimetableSwapService, and FacultySessionSwapService
each independently reimplemented faculty/room/workload/audience conflict
checks. Add one validateAssignment() entry point in TimetableStaffingService
that all three now funnel through.

Also closes two real gaps found along the way: TimetableSwapService's
candidate scan now includes the physical-room cross-check staffing already
had, and collects every violation in one pass instead of stopping at the
first. FacultySessionSwapService's staff-swap now also gets a blocked-period
check it never had before.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>